--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -5,3 +5,13 @@ body {
 img {
     border-radius:50%;
 }
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
