--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,6 +5,7 @@
 <html>
 <head>
 <img src "default.jpg" alt="profile pic">
+  </head>
 <style>
 img {
 border-radius:50%;
@@ -20,3 +21,6 @@ border-radius:50%;
   </table></br>
   
   <button type = "button">Follow</button>
+
+</html>
+{% endblock %}
