--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -12,7 +12,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
-      <li class = "nav_item">
+      <li class = "nav-item">
         <a class = "nav-link" href="{{url_for('profile') }}">Profile</a>
       </li>
     </ul>
