--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,13 +2,9 @@
 {% block main %}
 {{ super() }}
 <head>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/app.css') }}">
 <img src "default.jpg" alt="profile pic">
   </head>
-<style>
-img {
-border-radius:50%;
-}
-</style>
   <title>Krystan Ramcharan</title>
   <h2>@krys</h2>
   <h2>Montego Bay, Jamaica</h2>
