--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,7 +2,7 @@
 {% block main %}
 {{ super() }}
 <head>
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/app.css') }}">
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/app.css') }}">
 <img src "default.jpg" alt="profile pic">
   </head>
   <title>Krystan Ramcharan</title>
