--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,7 +9,7 @@
   <h2>@krys</h2>
   <h2>Montego Bay, Jamaica</h2>
   <h2>Joined February, 2020</h2>
-  <h2> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</h2>
+  <h3> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</h3></br>
   <table><tr style= "visibility:hidden"><td>7</td></tr>  <tr style = "visibility:hidden"><td>100</td></tr>   <tr style="visibility: hidden"><td>250</td></tr></br>
          <tr style= "visibility:hidden"><td>Posts</td></tr> <tr style= "visibility:hidden"><td>Followers</td></tr> <tr style= "visibility:hidden"><td>Following</td></tr>
   </table></br>
