--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,7 +2,7 @@
 {% block main %}
 {{ super() }}
 <head>
-<link rel= "stylesheet" type= "text/css" href= "static/css/app.css">
+<link rel="stylesheet" type="=text/css" href="{{ url_for('static', filename='css/app.css') }}">
 <img src "static/default.jpg" alt="profile pic">
   </head>
   <title>Krystan Ramcharan</title>
@@ -10,8 +10,8 @@
   <h2>Montego Bay, Jamaica</h2>
   <h2>Joined February, 2020</h2>
   <h3> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</h3></br>
-  <table><tr style= "visibility:hidden"><td>7</td></tr>  <tr style = "visibility:hidden"><td>100</td></tr>   <tr style="visibility: hidden"><td>250</td></tr></br>
-         <tr style= "visibility:hidden"><td>Posts</td></tr> <tr style= "visibility:hidden"><td>Followers</td></tr> <tr style= "visibility:hidden"><td>Following</td></tr>
+  <table><tr><td>7</td></tr>  <tr><td>100</td></tr>   <tr><td>250</td></tr></br>
+         <tr><td>Posts</td></tr> <tr><td>Followers</td></tr> <tr><td>Following</td></tr>
   </table></br>
   
   <button type = "button">Follow</button>
