--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,8 +2,8 @@
 {% block main %}
 {{ super() }}
 <head>
-<link rel="stylesheet" type="=text/css" href="{{ url_for('static', filename='css/app.css') }}">
-<img src "static/default.jpg" alt="profile pic">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
+<img src="{{url_for('static', filename='default.jpg')  }}" alt="profile pic">
   </head>
   <title>Krystan Ramcharan</title>
   <h2>@krys</h2>
