--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -10,9 +10,9 @@
   <h2>Montego Bay, Jamaica</h2>
   <h2>Joined February, 2020</h2>
   <p> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</p></br>
-  <table><tr><td>7</td></tr>  <tr><td>100</td></tr>   <tr><td>250</td></tr></br>
-         <tr><td>Posts</td></tr> <tr><td>Followers</td></tr> <tr><td>Following</td></tr>
-  </table></br>
+    <div7</div>    <div>100</div>  <div>250</div>
+<div>Posts</div  <div>Followers</div> <div>Following</div>
+  </br>
   
   <button type = "button">Follow</button>
 
