--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,12 +6,12 @@
 <img src="{{url_for('static', filename='default.jpg')  }}" alt="profile pic">
   </head>
   <title>Krystan Ramcharan</title>
-  <h2>@krys</h2>
-  <h2>Montego Bay, Jamaica</h2>
-  <h2>Joined February, 2020</h2>
-  <p> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</p></br>
-    <div7</div>    <div>100</div>  <div>250</div>
-<div>Posts</div  <div>Followers</div> <div>Following</div>
+         <h2>@krys</h2>
+<p class="a">Montego Bay, Jamaica</p>
+<p class="a">Joined February, 2020</p>
+  <p class="a"> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</p></br>
+<p class= "b">7</p>   <p class= "b">100</p>  <p class="b">250</p>
+<p class="b">Posts</p> <p class="b">Followers</p>> <p class="b">Following</p>
   </br>
   
   <button type = "button">Follow</button>
