--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -14,6 +14,6 @@
 <p class="b">Posts</p> <p class="b">Followers</p>> <p class="b">Following</p>
   </br>
   
-  <button type = "button">Follow</button>
+  <button class ="button">Follow</button>
 
 {% endblock %}
