--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -3,7 +3,7 @@
 {{ super() }}
 <head>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
-<img src="{{url_for('static', filename='default.jpg')  }}" alt="profile pic">
+<img src="{{url_for('static', filename='default.jpg')  }}" alt="profile pic"  class="center">
   </head>
   <title>Krystan Ramcharan</title>
          <h2>@krys</h2>
