--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,7 +6,7 @@
 <img src="{{url_for('static', filename='default.jpg')  }}" alt="profile pic"  class="center">
   </head>
   <title>Krystan Ramcharan</title>
-         <h2>@krys</h2>
+         <h2 align= "center">@krys</h2>
 <p class="a">Montego Bay, Jamaica</p>
 <p class="a">Joined February, 2020</p>
   <p class="a"> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</p></br>
