--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -11,9 +11,9 @@
 <p class="a">Joined February, 2020</p>
   <p class="a"> Programming enthusiast and expert swimmer. I enjoy coding and try to improve my skills every day.</p></br>
 <p class= "b">7</p>   <p class= "b">100</p>  <p class="b">250</p>
-<p class="b">Posts</p> <p class="b">Followers</p>> <p class="b">Following</p>
+<p class="b">Posts</p> <p class="b">Followers</p> <p class="b">Following</p>
   </br>
   
-  <button class ="button">Follow</button>
+  <button class ="button" class="center-b">Follow</button>
 
 {% endblock %}
