--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -13,10 +13,7 @@ img {
   width: 50%;
 }
 
-
-
-
-
+   
  .button {
   background-color: #4CAF50; /* Green */
   border: none;
@@ -26,6 +23,8 @@ img {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  position:absolute;
+  top:50%
   
 }
 
